Updating gitignore to ignore databackups

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 # -------------------------
+# Data backups
+# -------------------------
+databackup/
+
+# -------------------------
 # Salesforce DX / project files
 # -------------------------
 .sf/
